public/index.css
/* ... */
button,
select,
a {
  cursor: pointer;
}

.pointer {
  cursor: pointer !important;
}

#prec text {
  font-size: 32px;
  stroke: none;
  text-shadow: 1px 1px 1px #9daac9;
  user-select: none;
}

#cells,
#compass {
  fill: none;
}

#landmass {
  mask: url(#land);
  fill-rule: evenodd;
}

#lakes {
  mask: url(#water);
}

#lakes,
#coastline,
#armies,
#ice,
#emblems,
#goodsCells,
#goodsIcons,
#goodsBurgs,
#markets {
  cursor: pointer;
}

#markets > g > path,
#markets > g > text {
  user-select: none;
  pointer-events: none;
}

#temperature {
  font-family: var(--sans-serif);
  font-weight: 700;
  text-anchor: middle;
  dominant-baseline: central;
  text-shadow: 0px 0px 10px white;
  fill-rule: evenodd;
}

#oceanLayers,
#terrs {
  fill-rule: evenodd;
}

#coastline {
  fill: none;
  stroke-linejoin: round;
}

t,
#regions,
#cults,
#relig,
#biomes,
#population,
#provincesBody,
#terrs,
#tooltip,
#temperature,
#texture,
#landmass,
#vignette,
#gridOverlay,
#fogging {
  pointer-events: none;
}

#armies text {
  pointer-events: none;
  user-select: none;
  stroke: none;
  fill: #fff;
  text-shadow: 0 0 4px #000;
  dominant-baseline: central;
  text-anchor: middle;
  font-family: var(--sans-serif);
  fill-opacity: 1;
}

#armies text.regimentIcon {
  font-size: 0.8em;
}

#statesHalo {
  fill: none;
  stroke-linecap: round;
  stroke-linejoin: round;
}

#statesBody,
#provincesBody,
#relig,
#biomes,
#population,
#cults {
  stroke-linejoin: round;
  fill-rule: evenodd;
}

#statesBody,
#provincesBody,
#relig,
#cults {
  mask: url(#land);
}

#borders {
  stroke-linejoin: round;
  fill: none;
}

#rivers {
  stroke: none;
  mask: url(#land);
  cursor: pointer;
  fill-rule: nonzero;
}

#anchors {
  pointer-events: none;
}

#terrain,
#burgIcons {
  cursor: pointer;
}

.strokes {
  stroke-width: 0.08px;
  width: 2px;
  stroke: #5c5c70;
  stroke-dasharray: 0.5, 0.7;
  stroke-linecap: round;
}

#routes {
  fill: none;
  cursor: pointer;
}

i.icon-lock {
  cursor: pointer;
}

#labelEditor div {
  display: inline-block;
}

#labels {
  text-anchor: middle;
  dominant-baseline: central;
  cursor: pointer;
}

.chartInfo {
  text-align: center;
  font-family: var(--sans-serif);
  font-style: italic;
  font-size: 12px;
}

#statesTree text,
#provincesTree text {
  pointer-events: none;
  user-select: none;
  stroke: none;
  font-size: 11px;
}

#statesTree circle {
  filter: url(#dropShadow05);
  stroke: #666666;
  stroke-width: 1;
}

#statesTree circle.selected,
#provincesTree .selected {
  stroke: #c13119;
  stroke-width: 2;
}

.regimentDragLine {
  marker-end: url(#end-arrow);
  stroke: #333333;
  stroke-dasharray: 5;
  stroke-dashoffset: 1000;
  animation: dash 80s linear backwards;
}

.arrow {
  marker-end: url(#end-arrow-small);
  stroke: #555;
  stroke-width: 0.5;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}

#provinceLabels,
#burgLabels {
  dominant-baseline: alphabetic;
  text-anchor: middle;
}

#routeLength,
#coastlineArea {
  background-color: #eeeeee;
  border: 1px solid #a5a5a5;
  line-height: 1.3em;
  cursor: default;
}

#brushCircle {
  stroke: #373737;
  stroke-width: 1.5px;
  stroke-dasharray: 7;
  stroke-linecap: butt;
  fill: none;
}

text.drag {
  text-shadow: 0 0 1px red;
}

#dialogs {
  background-color: var(--bg-dialogs);
}

.draggable {
  cursor: move;
}

.ui-widget-header {
  border-bottom: 1px solid var(--dark-solid);
  background: var(--header);
  color: #ffffff;
  font-weight: bold;
}

button.ui-button:disabled {
  filter: brightness(0.95);
}

button.ui-button:disabled:hover {
  cursor: default;
}

.ui-dialog,
#optionsContainer {
  user-select: none;
}

#optionsTrigger {
  padding: 0.6em 0.45em;
}

@media (max-width: 600px) {
  #optionsTrigger {
    font-size: 2em;
    padding: 0;
    width: 1.3em;
    height: 1.6em;
    border: solid 1px #5e4fa2;
  }
}

#options {
  position: absolute;
  font-family: var(--monospace);
  border: solid 1px #5e4fa2;
  margin: 10px;
  padding-bottom: 0.3em;
  background: var(--bg-light);
}

#options input,
#options select,
#options button {
  font-family: var(--monospace);
}

#collapsible {
  margin: 11px;
  border: 0;
  position: absolute;
  z-index: 2;
  display: grid;
  grid-template-columns: 2fr 7fr;
}

.tab {
  border-bottom: 1px solid var(--dark-solid);
  height: 2.2em;
  display: flex;
  justify-content: space-between;
}

div.tab > button#optionsHide {
  width: auto;
  font-family: var(--sans-serif);
  padding: 0.6em 0.45em;
}

button.options {
  width: 100%;
  background-color: var(--bg-main);
  font-weight: bold;
  border: none;
  transition: 0.2s;
}

button.active {
  background-color: var(--header);
  border-color: var(--dark-solid);
  border-radius: 3px;
  color: white;
}

button.options:hover {
  background-color: var(--header-active);
  color: white;
}

#options p {
  font-style: italic;
  font-weight: bold;
  margin: 0.8em 0 0 0;
}

#options .tip {
  color: #444;
  font-size: 0.9em;
  font-family: sans-serif;
  font-style: italic;
  margin-left: 0.5em;
}

#aboutContent {
  text-align: justify;
}

#aboutContent p {
  font-weight: normal;
  font-style: normal;
}

#aboutContent a {
  color: #1d1b1c;
  font-weight: bold;
  text-decoration: underline;
}

#optionsContent span {
  font-size: 0.9em;
}

#options i {
  color: #31272c;
  font-size: 0.85em;
  cursor: pointer;
}

#options button i.icon-cog {
  position: absolute;
  padding: 0.1em 0.3em;
  background-color: var(--bg-lighter);
  border-radius: 50%;
  visibility: hidden;
  opacity: 0;
  transition: 0.4s ease-in-out;
}
/* ... */

